some simple menu styles

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <title>videojs-dash-hls-bitrate-switcher Demo</title>
     <link href="node_modules/video.js/dist/video-js.css" rel="stylesheet" />
+    <link href="dist/videojs-dash-hls-bitrate-switcher.css" rel="stylesheet" />
 </head>
 
 <body>
