--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             var dashHlsBitrateSwitcher = (window.dashHlsBitrateSwitcher =
                 examplePlayer.dashHlsBitrateSwitcher({
-                    support: "both",
+                    support: "both"
                 }));
         })(window, window.videojs);
     </script>
