fixes for media tailor

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       controls
     >
       <source
-        src="https://dash.akamaized.net/akamai/bbb_30fps/bbb_30fps.mpd"
-        type="application/dash+xml"
+        src="https://2cb49dec089e4b488790a584bfb7ac13.mediatailor.us-east-1.amazonaws.com/v1/master/d02fedbbc5a68596164208dd24e9b48aa60dadc7/r46d0g-1639645677/master.m3u8"
+        type="application/x-mpegurl"
       />
       <!--<source src="https://d2zihajmogu5jn.cloudfront.net/bipbop-advanced/bipbop_16x9_variant.m3u8" type="application/x-mpegURL" />-->
       <!--<source
