Adds support for stream info

--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
           {
             techOrder: ["html5"],
             html5: {
-              hls: {
+              vhs: {
                 overrideNative: true,
                 cacheEncryptionKeys: true,
               },
             },
             plugins: {
               dashHlsBitrateSwitcher: {
-                support: "both",
+                showInfo: false,
               },
             },
             crossOrigin: "anonymous",
